[gd_scene load_steps=11 format=3 uid="uid://cuktkt2a5w5md"]

[ext_resource type="Script" path="res://Buildings/HQ/bld_hq.gd" id="1_vtrm6"]
[ext_resource type="Texture2D" uid="uid://j5687mde517n" path="res://Assets/Sprites/Buildings/Hq/Pad.png" id="2_4yser"]
[ext_resource type="Texture2D" uid="uid://b0vgdvyeu2mbd" path="res://Assets/Sprites/Buildings/Hq/HQLeftBLD.png" id="3_iqojh"]
[ext_resource type="Material" uid="uid://dam0hqx0s55kb" path="res://Assets/highlight_shader_material.tres" id="3_y83ul"]
[ext_resource type="Texture2D" uid="uid://duwa0l8d2yrts" path="res://Assets/Sprites/Buildings/Hq/HQLeftGadgets.png" id="4_gfxh8"]
[ext_resource type="Texture2D" uid="uid://dpq8hc6183hk7" path="res://Assets/Sprites/Buildings/Hq/HQRightBLD.png" id="5_1it30"]
[ext_resource type="Texture2D" uid="uid://bpkf8kxahsykj" path="res://Assets/Sprites/Buildings/Hq/HQRightGadgets.png" id="6_cvxw7"]
[ext_resource type="Texture2D" uid="uid://bpkwfdg5sbrk0" path="res://Assets/Sprites/Buildings/Hq/HqSkirt.png" id="7_hopno"]
[ext_resource type="Texture2D" uid="uid://bieqj57tqx8c6" path="res://Assets/Sprites/Buildings/Hq/HQTower.png" id="8_d441r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q85i4"]
size = Vector2(230, 92)

[node name="HQDeployNode" type="Area2D"]
script = ExtResource("1_vtrm6")

[node name="Sprites" type="Node2D" parent="."]

[node name="HQPadSprite" type="Sprite2D" parent="Sprites"]
material = ExtResource("3_y83ul")
position = Vector2(130, 0)
texture = ExtResource("2_4yser")
offset = Vector2(58, -2)

[node name="HQLeftBldSprite" type="Sprite2D" parent="Sprites"]
material = ExtResource("3_y83ul")
position = Vector2(-68.5, -26)
texture = ExtResource("3_iqojh")
offset = Vector2(2.5, -42)

[node name="HQLeftGadgetsSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(-69.5, -110)
texture = ExtResource("4_gfxh8")
offset = Vector2(0, -16.5)

[node name="HQRightBldSprite" type="Sprite2D" parent="Sprites"]
material = ExtResource("3_y83ul")
position = Vector2(46.5, -26)
texture = ExtResource("5_1it30")
offset = Vector2(0, -24.5)

[node name="HQRightGadgetsSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(16.5, -75)
texture = ExtResource("6_cvxw7")
offset = Vector2(0, -10)

[node name="HQSkirtSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(5.5, -26)
texture = ExtResource("7_hopno")
offset = Vector2(0, 13.5)

[node name="HQTowerSprite" type="Sprite2D" parent="Sprites"]
material = ExtResource("3_y83ul")
position = Vector2(89.5, -75)
texture = ExtResource("8_d441r")
offset = Vector2(0, -66.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, -49)
shape = SubResource("RectangleShape2D_q85i4")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
